integ-tests/tests/snapshots/parser__bad_leading_zeros__neg_with_dec.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ neg_with_dec:1:7
  │
1 │ a = -00.0
  │       ^ unable to parse number


